kube-manifests/01-MySQL-externalName-Service.yml
apiVersion: v1
kind: Service
metadata:
  name: mysql
spec:
  type: ExternalName
  externalName: usermgmtdb.c2fe4ymuurjz.us-east-1.rds.amazonaws.com
